--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ng-http-loader": "^6.0.1",
     "popper.js": "^1.16.0",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
