--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "angular-ng-autocomplete": "^1.1.14",
     "angular2-flash-messages": "^3.0.1",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
